--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation project(":common:common-base")
+    implementation project(":common:common-repository")
 
 }
