--- a/common/common-base/build.gradle
+++ b/common/common-base/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
 
     //Cookies自动持久化
-    implementation 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
+    api 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
     //动态替换BaseUrl库 使用可参考 https://github.com/JessYanCoding/RetrofitUrlManager
     implementation 'me.jessyan:retrofit-url-manager:1.4.0'
 
@@ -49,10 +49,9 @@ dependencies {
     // viewModel
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
     api "androidx.fragment:fragment-ktx:1.3.5"
-
-    //代替系统share preference
-    api 'com.tencent:mmkv:1.0.22'
-
+    //api "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
+    api 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
+    
     api 'io.reactivex.rxjava2:rxjava:2.2.16'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'com.squareup.retrofit2:retrofit:2.9.0'
