--- a/common/common-repository/build.gradle
+++ b/common/common-repository/build.gradle
@@ -34,9 +34,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
-    
-    api 'com.blankj:utilcodex:1.31.0'
-    //代替系统share preference
-    api 'com.tencent:mmkv:1.0.22'
-    
+   
+    api project(":common:common-util")
+    api project(":common:common-base")
 }
