--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include ':app'
 include ':common:common-base'
 include ':common:common-util'
 include ':common:common-widget'
+include ':common:common-repository'
