--- a/common/common-base/build.gradle
+++ b/common/common-base/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'me.jessyan:retrofit-url-manager:1.4.0'
 
     api project(":common:common-util")
+    api project(":common:common-constant")
 
     // viewModel
     api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
@@ -58,5 +59,6 @@ dependencies {
     api 'com.squareup.retrofit2:converter-gson:2.9.0'
     api 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
-
+   
+    
 }
