--- a/common/common-util/build.gradle
+++ b/common/common-util/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -12,6 +13,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        
     }
 
     buildTypes {
@@ -38,5 +40,6 @@ dependencies {
     api 'com.blankj:utilcodex:1.31.0'
     //代替系统share preference
     api 'com.tencent:mmkv:1.0.22'
-    
+
+    api 'com.alibaba:arouter-api:1.5.2'
 }
