--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,17 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+android.enableJetifier=true
+#kapt.use.worker.api=false
+#kapt.incremental.apt=false
+
+isDeviceModule=true
+#isDeviceModule=false
+
+isNoticeModule=true
+#isNoticeModule=false
+
+isVipModule=true
+#isVipModule=false
+
