--- a/module_device/build.gradle
+++ b/module_device/build.gradle
@@ -51,7 +51,10 @@ android {
             }
         }
     }
-    
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
 }
 
 dependencies {
