--- a/gradle.properties
+++ b/gradle.properties
@@ -26,8 +26,8 @@ android.enableJetifier=true
 #kapt.use.worker.api=false
 #kapt.incremental.apt=false
 
-#isDeviceModule=true
-isDeviceModule=false
+isDeviceModule=true
+#isDeviceModule=false
 
 isNoticeModule=true
 #isNoticeModule=false
