--- a/module_vip/build.gradle
+++ b/module_vip/build.gradle
@@ -52,6 +52,10 @@ android {
             }
         }
     }
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+    }
     
 }
 
@@ -64,4 +68,9 @@ dependencies {
 
     implementation project(":common:common-repository")
     kapt 'com.alibaba:arouter-compiler:1.5.2'
+
+    // 图片加载框架：https://github.com/bumptech/glide
+    // 官方使用文档：https://github.com/Muyangmin/glide-docs-cn
+    api 'com.github.bumptech.glide:glide:4.12.0'
+    kapt 'com.github.bumptech.glide:compiler:4.12.0'
 }
