--- a/common/common-base/build.gradle
+++ b/common/common-base/build.gradle
@@ -29,6 +29,7 @@ android {
     }
 
     buildFeatures {
+        viewBinding true
         dataBinding true
     }
 }
@@ -64,5 +65,9 @@ dependencies {
     api 'me.jessyan:autosize:1.2.1'
 
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.4'
-    
+    if (isAipn) {
+        api project(':notification:aipn')
+    }
+
+
 }
