--- a/module_device/src/main/AndroidManifest.xml
+++ b/module_device/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.blackview.module_device">
 
     <application
+        android:name="com.blackview.base.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -11,6 +12,7 @@
         android:theme="@style/Theme.Arphaplusandroid">
         <activity
             android:name=".DeviceActivity"
+            android:launchMode="singleTask"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
