--- a/module_vip/src/main/AndroidManifest.xml
+++ b/module_vip/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.blackview.module_vip">
 
     <application
+        android:name="com.blackview.base.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".VipDeviceActivity"/>
     </application>
 
 </manifest>
