--- a/common/common-base/build.gradle
+++ b/common/common-base/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     api "androidx.fragment:fragment-ktx:1.3.5"
     //api "androidx.lifecycle:lifecycle-runtime-ktx:2.4.0"
     api 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    
+
     api 'io.reactivex.rxjava2:rxjava:2.2.16'
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -68,6 +68,8 @@ dependencies {
     if (isAipn) {
         api project(':notification:aipn')
     }
+    //权限
+    api "com.github.permissions-dispatcher:permissionsdispatcher:4.9.2"
 
 
 }
