--- a/module_vip/build.gradle
+++ b/module_vip/build.gradle
@@ -73,4 +73,5 @@ dependencies {
     // 官方使用文档：https://github.com/Muyangmin/glide-docs-cn
     api 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
+    api 'com.github.li-xiaojun:XPopup:2.8.0'
 }
