使用navigation来管理账号管理的fragment

--- a/module_vip/src/main/AndroidManifest.xml
+++ b/module_vip/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".device.VipDeviceActivity"/>
+        <activity android:name=".account.AccountActivity"/>
     </application>
 
 </manifest>
