--- a/module_vip/build.gradle
+++ b/module_vip/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
+    // navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
+
     implementation project(":common:common-repository")
     kapt 'com.alibaba:arouter-compiler:1.5.2'
 
