--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,12 +45,12 @@
             android:name="notch.config"
             android:value="portrait|landscape" />
         <!--屏幕适配 ui图最小宽度-->
-        <meta-data
+        <!--<meta-data
             android:name="design_width_in_dp"
             android:value="320" />
         <meta-data
             android:name="design_height_in_dp"
-            android:value="568" />
+            android:value="568" />-->
 
     </application>
 
