--- a/module_device/src/main/AndroidManifest.xml
+++ b/module_device/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
     <!--自定义WiFi列表用到的权限-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
     <application
         android:name="com.blackview.base.App"
         android:allowBackup="true"
@@ -18,18 +18,38 @@
         android:theme="@style/Theme.Arphaplusandroid">
         <activity
             android:name=".DeviceActivity"
-            android:launchMode="singleTask"
-            android:exported="true">
+            android:exported="true"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
-        <activity android:name=".add.AddAty"/>
-        <activity android:name=".SelectWifiActivity"/>
-        <activity android:name=".DeviceInfoAty"/>
+
+        <activity android:name=".add.AddAty" />
+        <activity android:name=".SelectWifiActivity" />
+        <activity android:name=".DeviceInfoAty" />
+
+        <!--全面屏-->
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.4" />
+        <!--适配华为（huawei）刘海屏-->
+        <meta-data
+            android:name="android.notch_support"
+            android:value="true" />
+        <!--适配小米（xiaomi）刘海屏-->
+        <meta-data
+            android:name="notch.config"
+            android:value="portrait|landscape" />
+        <!--屏幕适配 ui图最小宽度-->
+        <!--<meta-data
+            android:name="design_width_in_dp"
+            android:value="320" />
+        <meta-data
+            android:name="design_height_in_dp"
+            android:value="528" />-->
     </application>
 
 </manifest>
