--- a/module_device/src/main/moduleManifest/AndroidManifest.xml
+++ b/module_device/src/main/moduleManifest/AndroidManifest.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.blackview.module_device">
+    
+    <!--自定义WiFi列表用到的权限-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
     <application>
         <activity android:name=".DeviceActivity" />
-        <activity android:name=".add.AddAty"/>
+        <activity android:name=".add.AddAty" />
+
+        <activity android:name=".SelectWifiActivity" />
+        <activity android:name=".DeviceInfoAty" />
     </application>
 
 </manifest>
