实现头像更换、头像选择、头像裁剪等功能

--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ include ':module_device'
 include ':module_notice'
 include ':module_vip'
 include ':common:common-res'
+include ':picture_library'
