--- a/module_vip/build.gradle
+++ b/module_vip/build.gradle
@@ -13,7 +13,7 @@ android {
         if (!isVipModule.toBoolean()) {
             applicationId "com.blackview.module_vip"
         }
-       
+
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -56,7 +56,7 @@ android {
         dataBinding true
         viewBinding true
     }
-    
+
 }
 
 dependencies {
@@ -71,6 +71,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
 
     implementation project(":common:common-repository")
+    implementation project(":picture_library")
     kapt 'com.alibaba:arouter-compiler:1.5.2'
 
     // 图片加载框架：https://github.com/bumptech/glide
@@ -78,4 +79,5 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.12.0'
     kapt 'com.github.bumptech.glide:compiler:4.12.0'
     api 'com.github.li-xiaojun:XPopup:2.8.0'
+
 }
